# gnome-markdown-folder

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  remove.sh  requirements.txt
src/: __init__.py  application.py  git_dialog.py  history_dialog.py  window.py
