[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gnome-markdown-folder"
version = "1.0.0"
description = "Browse, read and edit Markdown files with Git integration — GTK4/libadwaita"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Rafael Sieber", email = "rafaelsieber@users.noreply.github.com" }]
requires-python = ">=3.11"

# Runtime deps are system libraries (PyGObject, GTK4, libadwaita).
# Listed here for documentation; installed via system package manager.
dependencies = []

[project.optional-dependencies]
# Nice-to-have: syntax highlighting in the editor
syntax = ["pygments"]

[project.scripts]
markdown-folder = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
